--- a/Challenge de ferias 2.0/Info.plist
+++ b/Challenge de ferias 2.0/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Vamos usar sua camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Vamos usar sua biblioteca</string>
 </dict>
 </plist>
